--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "index.ts",
   "dependencies": {},
   "devDependencies": {
-    "@types/node": "^16.11.11"
+    "@tsconfig/node14": "^1.0.1",
+    "@types/node": "^16.11.11",
+    "ts-node": "^10.4.0",
+    "typescript": "^4.5.2"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
